--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
           </div>
         </div>
       </nav>
+      <main class="container-fluid">
+        <div class="row">
+          <h2 class="display-2">
+            Welcome to our store
+          </h2>
+        </div>
+        <div class="row gap-2 justify-content-center" recentProducts></div>
+      </main>
+      <footer class="container-fluid">
+        <div class="row">
+          <p class="lead">Copyright &copy; 
+            <span currentYear></span></p>
+        </div>
+      </footer>
     
         <!-- Bootstrap's script -->
         <script
