--- a/html/admin.html
+++ b/html/admin.html
@@ -58,7 +58,7 @@
     </main>
     <footer class="container-fluid">
       <div class="row">
-        <p class="lead">Copyright &copy; 
+        <p class="lead">The Cake Studio &copy; 
           <span currentYear></span></p>
       </div>
     </footer>
