--- a/html/products.html
+++ b/html/products.html
@@ -59,7 +59,7 @@
     </main>
     <footer class="container-fluid">
       <div class="row">
-        <p class="lead">Copyright &copy; 
+        <p class="lead">The Cake Studio &copy; 
           <span currentYear></span></p>
       </div>
     </footer>
