--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon -->
-    <link rel="shortcut icon" href =" https://asheekasamuels.github.io/All-Images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href =" https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg" type="image/x-icon">
     <!-- Bootstrap's styling -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -17,10 +17,11 @@
     <title>About</title>
   </head>
   <body>
+    <!-- Start of Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"> 
-          <img src="https://asheekasamuels.github.io/All-Images/images/Asheeka Barbie Logo.png" alt="logo" loading="lazy">
+          <img src="https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg" alt="logo" loading="lazy">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -49,12 +50,22 @@
         </div>
       </div>
     </nav> 
+    <!-- End of Navbar -->
+
+    <!-- Start of About -->
+
     <main class="container-fluid">
-      <div class="row">
-        <h2 class="display-2">
-          About
-        </h2>
-      </div>
+      <h2 class="display-2">About Us</h2>
+    <div class="container3">
+      <div class="box" id="box1">
+        <h3 id="head3">Our Story:</h3>
+            <p id="p2">Welcome to The Cake Studio, where every cake is a labor of love!
+              I'm Asheeka Samuels, the founder and head baker of this sweet venture. Since 2022, I've been passionate about creating personalized cakes that make your special moments even sweeter.
+              From birthdays to weddings, graduations to anniversaries, I believe that every celebration deserves a cake that's as unique as you are. That's why I offer custom designs, flavors, and messages to make your cake truly one-of-a-kind.
+              With a focus on quality, attention to detail, and a dash of creativity, I aim to make every cake a masterpiece that tastes as good as it looks. Whether you're a chocolate lover, a fan of fruity flavors, or a classic vanilla enthusiast, I've got you covered.
+              At The Cake Studio, we're dedicated to spreading joy, one cake at a time. Let us help make your next celebration even more unforgettable!
+               </p>
+      </div> 
     </main>
     <footer class="container-fluid">
       <div class="row">
