--- a/html/contact.html
+++ b/html/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon -->
-    <link rel="shortcut icon" href =" https://asheekasamuels.github.io/All-Images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href =" https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg" type="image/x-icon">
     <!-- Bootstrap's styling -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"> 
-          <img src="https://asheekasamuels.github.io/All-Images/images/Asheeka Barbie Logo.png" alt="logo" loading="lazy">
+          <img src="https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg" alt="logo" loading="lazy">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
