--- a/html/checkout.html
+++ b/html/checkout.html
@@ -55,6 +55,18 @@
           Checkout
         </h2>
       </div>
+      <table class="table container-fluid" id="tableContent">
+        <tr class="trFont">
+          <th scope="col" id="checkImage">Image</th>
+          <th scope="col" id="checkName">Name</th>
+          <th scope="col" id="checkQuantity">Quantity</th>
+          <th scope="col" id="checkPrice">Price</th>
+        </tr>
+        <tbody table-checkout> 
+        </tbody>
+      </table>
+      <button class="purchaseButton" purchase-remove>Purchase</button>
+      <label display-total>0</label>
     </main>
     <footer class="container-fluid">
       <div class="row">
