--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon -->
-    <link rel="shortcut icon" href =" https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href=" https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg"
+      type="image/x-icon"
+    />
     <!-- Bootstrap's styling -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -20,16 +24,33 @@
     <!-- Start of Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"> 
-          <img src="https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg" alt="logo" loading="lazy">
+        <a class="navbar-brand" href="../index.html">
+          <img
+            src="https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg"
+            alt="logo"
+            loading="lazy"
+          />
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="../index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./about.html">About</a>
@@ -49,39 +70,70 @@
           </ul>
         </div>
       </div>
-    </nav> 
+    </nav>
     <!-- End of Navbar -->
 
     <!-- Start of About -->
 
     <main class="container-fluid">
       <h2 class="display-2">About Us</h2>
-    <div class="container3">
-      <div class="box" id="box1">
-        <h3 id="head3">Our Story:</h3>
-            <p id="p2">Welcome to The Cake Studio, where every cake is a labor of love!
-              I'm Asheeka Samuels, the founder and head baker of this sweet venture. Since 2022, I've been passionate about creating personalized cakes that make your special moments even sweeter.
-              From birthdays to weddings, graduations to anniversaries, I believe that every celebration deserves a cake that's as unique as you are. That's why I offer custom designs, flavors, and messages to make your cake truly one-of-a-kind.
-              With a focus on quality, attention to detail, and a dash of creativity, I aim to make every cake a masterpiece that tastes as good as it looks. Whether you're a chocolate lover, a fan of fruity flavors, or a classic vanilla enthusiast, I've got you covered.
-              At The Cake Studio, we're dedicated to spreading joy, one cake at a time. Let us help make your next celebration even more unforgettable!
-               </p>
-      </div> 
+      <div class="container3">
+        <div class="box" id="box1">
+          <h3 id="head3">Our Story:</h3>
+          <p id="p2">
+            Discover the sweet journey behind The Cake Studio. Born from a love
+            of baking, our founder, Asheeka Samuels, turned a passion for
+            creating delicious treats into a thriving cake shop. Explore our
+            curated collection of custom cakes and bring a touch of personalized
+            sweetness to your celebrations. Crafting edible stories, one cake at
+            a time
+          </p>
+        </div>
+        <div class="box" id="box1">
+          <h3 id="head3">Our Mission:</h3>
+          <p id="p2">
+            The Cake Studio's purpose is to inspire and enhance the art of cake
+            decorating by offering thoughtfully crafted and personalized cakes
+            for any occasion. We believe that every celebration has a unique
+            story to tell, and our purpose is to provide individuals with the
+            means to express their creativity and make their events even more
+            special. With a commitment to quality ingredients, authenticity, and
+            customer satisfaction, The Cake Studio aims to create a delightful
+            and indulgent experience in every cake, turning treats into edible
+            masterpieces that reflect the joy and stories of those who indulge
+            in them.
+          </p>
+        </div>
+        <div class="box" id="box1">
+          <h3 id="head3">Our Team:</h3>
+          <p id="p2">
+            At The Cake Studio, our team is a tight-knit family united by a
+            passion for baking and a love for crafting sweet stories through
+            cakes. We foster a culture of collaboration, innovation, and
+            attention to detail. Each member brings a unique skill set,
+            contributing to the vibrant tapestry of our bakery culture.
+            Together, we are dedicated to delivering personalized, high-quality
+            cakes that reflect the heart and soul of The Cake Studio
+          </p>
+        </div>
+      </div>
     </main>
     <footer class="container-fluid">
       <div class="row">
-        <p class="lead">The Cake Studio &copy; 
-          <span currentYear></span></p>
+        <p class="lead">The Cake Studio &copy; <span currentYear></span></p>
       </div>
     </footer>
     <!-- Bootstrap's script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
-      <!-- Custom's script -->
-      <script>
-        // current year
-        document.querySelector('[currentYear]').textContent = new Date().getUTCFullYear()
-      </script>
+      crossorigin="anonymous"
+    ></script>
+    <!-- Custom's script -->
+    <script>
+      // current year
+      document.querySelector("[currentYear]").textContent =
+        new Date().getUTCFullYear();
+    </script>
   </body>
 </html>
