--- a/html/products.html
+++ b/html/products.html
@@ -55,6 +55,15 @@
           Our Products
         </h2>
       </div>
+      <div class="row justify-content-between my-2 d-block d-md-flex p-2 ">
+        <div class="col">
+            <input class="form-control" type="text" placeholder="Search product by name" searchProduct>
+        </div>
+        <div class="col">
+            <button class="btn btn-success" type="button" sorting>Sorting</button>
+        </div>
+    </div>
+    <div class="row gap-2 justify-content-between mx-2" recentProducts></div>
     </main>
     <footer class="container-fluid">
       <div class="row">
