--- a/html/about.html
+++ b/html/about.html
@@ -75,7 +75,7 @@
 
     <!-- Start of About -->
 
-    <main class="container-fluid">
+    <main class="container-fluid3">
       <h2 class="display-2">About Us</h2>
       <div class="container3">
         <div class="box" id="box1">
