--- a/html/checkout.html
+++ b/html/checkout.html
@@ -55,6 +55,7 @@
           Checkout
         </h2>
       </div>
+      <div class="row gap-2 justify-content-center" recentProducts></div>
       <table class="table container-fluid" id="tableContent">
         <tr class="trFont">
           <th scope="col" id="checkImage">Image</th>
