--- a/html/products.html
+++ b/html/products.html
@@ -49,7 +49,7 @@
         </div>
       </div>
     </nav>
-    <main class="container-fluid">
+    <main class="container-fluidP">
       <div class="row">
         <h2 class="display-2">
           Our Products
