--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
         </div>
       </nav>
-      <main class="container-fluid">
+      <main class="container-fluid1">
         <div class="row">
             <h2 class="display-2">
                 Welcome To The Cake Studio
@@ -57,32 +57,27 @@
         </div>
         <section class="featured-products py-5">
           <div class="container">
-            <h2 class="text-center mb-5">Best Sellers</h2>
+            <h2 class="text-center mb-5">Best Seller</h2>
+            <h5> Floral Twenty First Two Tier Cake</h5>
             <div class="row">
               <div class="col-md-4 mb-4">
                 <div class="card">
-                  <img src="https://asheekasamuels.github.io/All-Images/images/character1.jpg" class="card-img-top" alt="Product 1" />
+                  <img src="https://asheekasamuels.github.io/All-Images/images/cake1.jpg" class="card-img-top" alt="Product 1" />
                   <div class="card-body">
-                    <h5 class="card-title">Frozen Character Cake</h5>
-                    <p class="card-text">R1500.00</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 mb-4">
                 <div class="card">
-                  <img src="https://asheekasamuels.github.io/All-Images/images/character2.jpg" class="card-img-top" alt="Product 2" />
+                  <img src="https://asheekasamuels.github.io/All-Images/images/cake2.jpg" class="card-img-top" alt="Product 2" />
                   <div class="card-body">
-                    <h5 class="card-title">Cocomelon Character Cake</h5>
-                    <p class="card-text">R1600.00</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4 mb-4">
                 <div class="card">
-                  <img src="https://asheekasamuels.github.io/All-Images/images/character3.jpg" class="card-img-top" alt="Product 3" />
+                  <img src="https://asheekasamuels.github.io/All-Images/images/cake3.jpg" class="card-img-top" alt="Product 3" />
                   <div class="card-body">
-                    <h5 class="card-title">Paw Patrol Character Cake</h5>
-                    <p class="card-text">R1250.00</p>
                   </div>
                 </div>
               </div>
