--- a/html/admin.html
+++ b/html/admin.html
@@ -53,12 +53,34 @@
         </div>
       </div>
     </nav> 
-    <main class="container-fluid">
+    <main class="container-fluid5">
       <div class="row">
         <h2 class="display-2">
           Admin
         </h2>
       </div>
+      <div id="inputs">
+        <label>Name: </label><input type="text" id="itemName" />
+        <label>Image: </label
+        ><input type="url" placeholder="Insert url" id="itemImg" />
+        <label>Price:</label><input type="number" id="itemPrice" />
+        <label>Category:</label><input type="text" id="itemCategory" />
+        <button class="addButton btn" onclick="addtoTable()">Add</button>
+      </div>
+  
+      <div id="table"></div>
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th class="img-head">Image</th>
+            <th>Price</th>
+            <th>Category</th>
+            <th>Options</th>
+          </tr>
+        </thead>
+        <tbody id="admin-table"></tbody>
+      </table>
     </main>
     <footer class="container-fluid">
       <div class="row">
