--- a/html/about.html
+++ b/html/about.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- Start of Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html">
           <img
