--- a/html/checkout.html
+++ b/html/checkout.html
@@ -17,7 +17,7 @@
     <title>Checkout</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="../index.html"> 
           <img src="https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg" alt="logo" loading="lazy">
@@ -53,7 +53,7 @@
         </div>
       </div>
     </nav> 
-    <main class="container-fluid">
+    <main class="container-fluid6">
       <div class="row">
         <h2 class="display-2">
           Checkout
