--- a/html/products.html
+++ b/html/products.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon -->
-    <link rel="shortcut icon" href =" https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg" type="image/x-icon" />
     <!-- Bootstrap's styling -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <!-- Custom's styling -->
     <link rel="stylesheet" href="../css/style.css" />
     <title>Products</title>
@@ -19,8 +14,8 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"> 
-          <img src="https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg" alt="logo" loading="lazy">
+        <a class="navbar-brand" href="../index.html">
+          <img src="https://asheekasamuels.github.io/All-Images/images/TheCakeStudio.jpg" alt="logo" loading="lazy" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -53,18 +48,17 @@
         </div>
       </div>
     </nav>
-    <main class="container-fluidP">
+    <main id="products" class="container-fluidP">
       <div class="row">
         <h2 class="display-2">
           Our Products
         </h2>
       </div>
-      <div class="row justify-content-between my-2 d-block d-md-flex p-2 ">
+      <div class="row">
         <div class="col">
-            <input class="form-control" type="text" placeholder="Search product by name" searchProduct>
-        </div>
-        <div class="col">
-            <button class="btn btn-success" type="button" sorting>Sorting</button>
+            <input type="text" placeholder="Search" required class="form-control" data-search-product>
+            <button class="btn btn-secondary m-1" sorting>Sort by Price</button>
+            <a class="btn btn-secondary m-1" href="../html/checkout.html">Checkout</a>
         </div>
     </div>
     <div class="row gap-2 justify-content-between mx-2" recentProducts></div>
@@ -105,7 +99,7 @@
                           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30px" height="30px"
                               class="github">
                               <path
-                                  d="M15,3C8.373,3,3,8.373,3,15c0,5.623,3.872,10.328,9.092,11.63C12.036,26.468,12,26.28,12,26.047v-2.051 c-0.487,0-1.303,0-1.508,0c-0.821,0-1.551-0.353-1.905-1.009c-0.393-0.729-0.461-1.844-1.435-2.526 c-0.289-0.227-0.069-0.486,0.264-0.451c0.615,0.174,1.125,0.596,1.605,1.222c0.478,0.627,0.703,0.769,1.596,0.769 c0.433,0,1.081-0.025,1.691-0.121c0.328-0.833,0.895-1.6,1.588-1.962c-3.996-0.411-5.903-2.399-5.903-5.098 c0-1.162,0.495-2.286,1.336-3.233C9.053,10.647,8.706,8.73,9.435,8c1.798,0,2.885,1.166,3.146,1.481C13.477,9.174,14.461,9,15.495,9 c1.036,0,2.024,0.174,2.922,0.483C18.675,9.17,19.763,8,21.565,8c0.732,0.731,0.381,2.656,0.102,3.594 c0.836,0.945,1.328,2.066,1.328,3.226c0,2.697-1.904,4.684-5.894,5.097C18.199,20.49,19,22.1,19,23.313v2.734 c0,0.104-0.023,0.179-0.035,0.268C23.641,24.676,27,20.236,27,15C27,8.373,21.627,3,15,3z">
+                                  d="M15,3C8.373,3,3,8.373,3,15c0,5.623,3.872,10.328,9.092,11.63C12.036,26.468,12,26.28,12,26.047v-2.051 c-0.487,0-1.303,0-1.508,0c-0.821,0-1.551-0.353-1.905-1.009c-0.393-0.729-0.461-1.844-1.435-2.526 c-0.289-0.227-0.069-0.486,0.264-0.451c0.615,0.174,1.125,0.596,1.605,1.222c0.478,0.627,0.703,0.769,1.596,0.769 c0.433,0,1.081-0.025,1.691-0.121c0.328-0.833,0.895-1.6,1.588-1.962c-3.996-0.411-5.903-2.399-5.903-5.098 c0-1.162,0.495-2.286,1.336-3.233C9.053,10.647,8.706,8.73,9.435,8c1.798,0,2.885,1.166,3.146,1.481C13.477,9.174,14.461,9,15.495,9 c1.036,0,2.024,0.174,2.922,0.483C18.675,9.17,19.763,8,21.565,8c0.732,0.731,0.381,2.656,0.102,3.594 c0.836,0.945,1.328,2.066,1.328,3.226c0,2.697-1.904,4.684-5.894,5.097C18.199,20.49,19,22.1,19,23.313v2.734 c0,0.104-0.023,0.179-0.035,0.268C23.641,24.676,27,20.236,27,15,C27,8.373,21.627,3,15,3z">
                               </path>
                           </svg>
                       </button>
@@ -119,16 +113,12 @@
               </div>
           </ul>
         </div>
-        <p class="lead">The Cake Studio &copy; 
-          <span currentYear></span></p>
+        <p class="lead">The Cake Studio &copy; <span currentYear></span></p>
       </div>
     </footer>
     <!-- Bootstrap's script -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
-      <!-- Custom's script -->
-      <script src="../script/products.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Custom's script -->
+    <script src="../script/products.js"></script>
   </body>
 </html>
