--- a/html/contact.html
+++ b/html/contact.html
@@ -14,6 +14,10 @@
     />
     <!-- Custom's styling -->
     <link rel="stylesheet" href="../css/style.css" />
+    <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Emilys+Candy&display=swap" rel="stylesheet">
     <title>Contact</title>
   </head>
   <body>
