--- a/html/checkout.html
+++ b/html/checkout.html
@@ -59,8 +59,8 @@
         </h2>
       </div>
       <div class="row gap-2 justify-content-center" recentProducts></div>
-      <table class="table container-fluid" id="tableContent">
-        <tr class="trFont">
+      <table class="checkoutTable" id="tableContent">
+        <tr class="trFont checkoutTr">
           <th scope="col" id="checkImage">Image</th>
           <th scope="col" id="checkProduct">Product</th>
           <th scope="col" id="checkQuantity">Quantity</th>
