--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg sticky-top">
-        <div class="-fluid">
+        <div class="container-fluid">
           <a class="navbar-brand" href="./index.html"> 
             <img src="https://asheekasamuels.github.io/All-Images/images/LOGO.png" alt="logo" loading="lazy">
           </a>
