--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="container">
             <h2 class="text-center mb-5">Best Sellers</h2>
             <div class="row">
-              <div class="col-md-4 mb-4 d-flex justify-content-center">
+              <div class="col-md-4 mb-4 d-flex align-content-center">
                 <div class="card">
                   <img src="https://asheekasamuels.github.io/All-Images/images/BUBSSweetAndSourMix.png" class="card-img-top" alt="Product 1" />
                   <div class="card-body">
@@ -73,7 +73,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4 mb-4 d-flex justify-content-center">
+              <div class="col-md-4 mb-4 d-flex align-content-center">
                 <div class="card">
                   <img src="https://asheekasamuels.github.io/All-Images/images/BUBSDizzySkulls.png" class="card-img-top" alt="Product 2" />
                   <div class="card-body">
@@ -81,7 +81,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4 mb-4 d-flex justify-content-center">
+              <div class="col-md-4 mb-4 d-flex align-content">
                 <div class="card">
                   <img src="https://asheekasamuels.github.io/All-Images/images/BUBSSourSquids.png" class="card-img-top" alt="Product 3" />
                   <div class="card-body">
