--- a/html/products.html
+++ b/html/products.html
@@ -66,6 +66,7 @@
         </div>
     </div>
     <div class="row gap-2 justify-content-between mx-2" recentProducts></div>
+    <div id="wrapper" class="card-container"></div>
     </main>
     <footer class="container-fluid">
       <div class="row">
