--- a/html/about.html
+++ b/html/about.html
@@ -115,9 +115,10 @@
     
     // Set cart counter on window load
     window.onload = () => {
-        const cart = JSON.parse(localStorage.getItem('cart')) || [];
-        document.querySelector('[counter]').textContent = cart.length || 0;
-    };
+    document.querySelector('[counter]').textContent = JSON.parse(localStorage.getItem('checkout'))
+        ? JSON.parse(localStorage.getItem('checkout')).length
+        : 0
+}
   </script>
 </body>
 
