--- a/html/contact.html
+++ b/html/contact.html
@@ -156,6 +156,12 @@
         <script>
           // current year
           document.querySelector('[currentYear]').textContent = new Date().getUTCFullYear()
+          //counter
+          window.onload = () => {
+          document.querySelector('[counter]').textContent = JSON.parse(localStorage.getItem('checkout'))
+        ? JSON.parse(localStorage.getItem('checkout')).length
+        : 0
+}
         </script>
 </body>
 </html>
