--- a/html/contact.html
+++ b/html/contact.html
@@ -102,7 +102,7 @@
         </div>
         <div class="col-md-4">
           <h3>Address</h3>
-          <p>314 Imam Haron, Rd Landsowne</p>
+          <p>314 Imam Haron, Rd Lansdowne</p>
           <p>Cape Town, Western Cape, 7780</p>
           <p>South Africa</p>
         </div>
